2000-11-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleMapNotify):
	proper hilighting after de-iconify by a key press

	* fvwm/fvwm.h (FvwmWindow):
	resorted some members of this struct to ease debugging

	* fvwm/add_window.c (setup_icon_font):
	got another icon font core dump

	* tests/purify/purify.fvwm2rc:
	bind test menu to a button so you can run multiple tests
	fix the menu cursor colours after the CursorStyle test
	removed the test with 1234678 colour sets - this will take days

2000-11-28  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/icons.c (CreateIconWindow): Hack to avoid core dump when no
	iconfont.
	* tests/purify/purify.fvwm2rc: Rewritten using a menu driver.
	You can run all tests, or just pick one.

2000-11-28  Chris Rankin  <rankinc@zipworld.com.au>

	* libs/Picture.c (LoadPicture)
	Added some DEBUG code so that we get a clue why OSF can't load
	some Pixmaps.

2000-11-28  Chris Rankin  <rankinc@zipworld.com.au>

	* fvwm/module_interface.c (executeModuleSync):
	Fix select()-handling so that it either exits if FVWM receives
	a terminate signal, or restarts the select call.

2000-11-28  olicha  <olivier.chapuis@free.fr>

	* fvwm/placement.c (test_fit):
	(get_next_y):
	(get_next_x):
	A try for a final cleverplacement algorithm. The code is
	not pretty for pratical reason, but it will be.

2000-11-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/builtins.c (FreeDecorFace):
	(ReadTitleButton):
	* fvwm/borders.c (DrawButton):
	* fvwm/fvwm.c (LoadDefaultLeftButton):
	(LoadDefaultRightButton):
	* fvwm/screen.h (enum):
	when a vector button is applied to a button/title style it erases the
	default vector first.

	* fvwm/borders.c (DrawButton):
	TiledPixmapButton works in window titles and buttons; heck, has this
	*ever* been tested?

	* NEWS, configure.in:
	changed version to 2.3.25

2000-11-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (do_menu):
	handle expose in WaitForButtonsUp

	* fvwm/move_resize.c (InteractiveMove):