@@ -1,5 +1,8 @@
 2000-11-29  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* fvwm/functions.c (CheckActionType):
+	do not sleep after an event was received but proceed immediately
+
 	* fvwm/events.c (HandleMapNotify):
 	proper hilighting after de-iconify by a key press
 
